refacto(tests): Simplify YapTestContainer mechanics
Only one postgres
Simplify YapTestContainer mechanics
Add async wait for ManualStartTest 
---------

Co-authored-by: j.lelong <j.lelong@groupeonepoint.com>